force-app/main/default/objects/Engagement_Skill_Requirement__c/Engagement_Skill_Requirement__c.object-meta.xml
<CustomObject>
<deploymentStatus>Deployed</deploymentStatus><description>Weighted industry, functional and technical capability demand attached to a governed engagement.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing>
<label>Engagement Skill Requirement</label><nameField><displayFormat>ESR-{00000}</displayFormat><label>Requirement Number</label><trackHistory>false</trackHistory><type>AutoNumber</type></nameField><pluralLabel>Engagement Skill Requirements</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility>
</CustomObject>