force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Capability__c.field-meta.xml
<CustomField><fullName>Capability__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Capability</label><referenceTo>Capability__c</referenceTo><relationshipLabel>Engagement Requirements</relationshipLabel><relationshipName>Engagement_Requirements</relationshipName><required>true</required><type>Lookup</type></CustomField>