force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Requirement Evidence</label><length>32768</length><visibleLines>4</visibleLines><type>LongTextArea</type></CustomField>