force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Dimension__c.field-meta.xml
<CustomField><fullName>Dimension__c</fullName><label>Skill Dimension</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Industry</fullName><default>false</default><label>Industry</label></value><value><fullName>Functional</fullName><default>false</default><label>Functional</label></value><value><fullName>Technical</fullName><default>true</default><label>Technical</label></value></valueSetDefinition></valueSet></CustomField>