force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Engagement__c.field-meta.xml
<CustomField><fullName>Engagement__c</fullName><label>Engagement</label><referenceTo>Engagement__c</referenceTo><relationshipLabel>Skill Requirements</relationshipLabel><relationshipName>Skill_Requirements</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>