force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Requested_Role__c.field-meta.xml
<CustomField><fullName>Requested_Role__c</fullName><label>Requested Role</label><length>120</length><required>true</required><type>Text</type></CustomField>