force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Required_Count__c.field-meta.xml
<CustomField><fullName>Required_Count__c</fullName><defaultValue>1</defaultValue><label>Required Count</label><precision>4</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>