force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Required_Level__c.field-meta.xml
<CustomField><fullName>Required_Level__c</fullName><label>Required Level</label><precision>1</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>