force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Requirement_Key__c.field-meta.xml
<CustomField><fullName>Requirement_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Requirement Key</label><length>80</length><required>true</required><type>Text</type><unique>true</unique></CustomField>