force-app/main/default/objects/Engagement_Skill_Requirement__c/fields/Weight_Percent__c.field-meta.xml
<CustomField><fullName>Weight_Percent__c</fullName><defaultValue>0</defaultValue><label>Weight Percent</label><precision>5</precision><required>true</required><scale>2</scale><type>Number</type></CustomField>