force-app/main/default/objects/Engagement_Skill_Requirement__c/validationRules/Requirement_Valid_Range.validationRule-meta.xml
<ValidationRule><fullName>Requirement_Valid_Range</fullName><active>true</active><errorConditionFormula>OR(End_Date__c &lt; Start_Date__c, Required_Level__c &lt; 1, Required_Level__c &gt; 4, Required_Count__c &lt; 1, Weight_Percent__c &lt; 0, Weight_Percent__c &gt; 100)</errorConditionFormula><errorMessage>Use valid dates, a level from 1 to 4, a positive count, and a weight from 0 to 100.</errorMessage></ValidationRule>